completed all commands